gcc/testsuite/rust/rustc/ui/invalid/invalid-macro-matcher.rs
#![allow(unused_macros)]

macro_rules! invalid {
    _ => (); // { dg-error "" "" { target *-*-* } }
}

fn main() {
}

